# django-rate-limiter

./: .gitignore  LICENSE  README.md  docker-compose.yml  manage.py  nginx.conf  principle_of_work.drawio  pyproject.toml  requirements.txt
admin_limiter/: admin.py  models.py
api_limiting/: asgi.py  settings.py  urls.py  views.py  wsgi.py
django_api_rate_limiter/: apps.py
django_api_rate_limiter/migrations/: 0001_initial.py
django_rate_limiter/: apps.py
nginx_lua/: rate_limit.lua
